# pydig

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  tox.ini
pydig/: __init__.py  query_type.py  resolver.py
tests/: test_query_type.py  test_resolver.py
