[tool.poetry]
name = "pydig"
version = "0.3.0"
description = "Python wrapper library for the 'dig' command line tool"
license = "GPL-3.0"
authors = ["Leon Smith <_@leonmarksmith.com>"]
readme = "README.md"
repository = "https://github.com/leonsmith/pydig"
homepage = "https://github.com/leonsmith/pydig"
keywords = [
    "dig",
    "dns",
    "pydig",
    "resolver",
    "lookup"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"